feat: :sparkles: Agregar ejercicio 5 (parte 2) - Instancia de Figura
Se ha agregado el ejercicio 5 (parte 2) de Programación Orientada a Objetos (POO) en JavaScript, que consiste en crear una instancia de la clase Figura y llamar al método calcularArea() para mostrar el resultado en el HTML.

--- a/index.html
+++ b/index.html
@@ -19,17 +19,14 @@
                     <input type="text" id="figure-color" name="color" class="form__input" required>
                 </div>
                 <div class="form__group">
-                    <label for="figure-width" class="form__label">Ancho de la Figura (cm):</label>
-                    <input type="number" id="figure-width" name="width" class="form__input" required>
-                </div>
-                <div class="form__group">
-                    <label for="figure-height" class="form__label">Alto de la Figura (cm):</label>
-                    <input type="number" id="figure-height" name="height" class="form__input" required>
+                    <label for="figure-area" class="form__label">Área de la Figura (cm²):</label>
+                    <input type="number" id="figure-area" name="area" class="form__input" required>
                 </div>
                 <button type="submit" class="form__button">Calcular Área</button>
             </form>
             <p id="area-message" class="message"></p>
         </section>
     </main>
+
 </body>
 </html>
